# chatacter

./: .deepsource.toml  .env.vault  .gitignore  .gitmodules  404.html  Dockerfile  FrameRateEnhancer.md  GlasswithComputerVision.md  Graduation Project.docx  JUIndoorLoc-Test-data.csv  Pipfile  README.md  Report For Graduation Project.docx  Report For Graduation Project.gdoc  SUMMARY.md  config.json  devcontainer.json  docs.json  environment.yml  index.html  mkdocs.yml  on_start.sh  pubspec.yaml  pyproject.toml  renovate.json  requirements.txt  sitemap.xml  sonar-project.properties  streamlit_app.py  t.dart
.GitHub/: renovate.json
.devcontainer/: Dockerfile  devcontainer.json
.fleet/: settings.json
.github/: CODEOWNERS  dependabot.yml  mergify.yml
.run/: DJANGO.run.xml  Django.run.xml
AI/: README.md  SadTalker.ipynb  SadTalker.py  autotrain.db  fine-tune.ipynb  fine-tune.py  formatted_data.csv  j.py  phi2 ft.ipynb  tavily_search_results.txt  try.ipynb  try_bark.py  try_flan.py  try_gradio.py  try_llama2.py  try_mine.py  try_mistral.py  try_phi2.py  try_streamlit.py
Artificial Intelligence/: try_mistral.py  try_phi2.py
Backend/: db.sqlite3  manage.py  requirements.txt
Documentations/: ChatwithCharactersinHistory.md  FrameRateEnhancer.md  HandwrittenBCIRecognition.md  README.md  chatacter.md
Documents/: Report For Graduation Project.docx
Frontend/: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
Rescearch/: Graduation Project Phase 1.docx  research.tex
Writerside/: README.md  c.list  in.tree  q.tree  v.list  writerside.cfg
ar/: index.html
(+1152 files in other folders)
