[project]
name = "chatacter"
version = "0.1.0"
description = "Character Documentation"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "cairosvg>=2.7.1",
    "mkdocs>=1.6.1",
    "mkdocs-git-committers-plugin-2>=2.5.0",
    "mkdocs-git-revision-date-localized-plugin>=1.3.0",
    "mkdocs-material[imaging]>=9.6.5",
    "mkdocs-static-i18n>=1.3.0",
]
